[tool.poetry]
name = "time-series-studies"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.3"
plotly = "^5.3.1"
notebook = "^6.4.4"
ipykernel = "^6.4.1"
matplotlib = "^3.4.3"
scikit-learn = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
